@@ -2,6 +2,8 @@
 
 	* Preparing 4.9.0 beta release.
 
+	* src/geodesic.{c,h}: sync relative to GeographicLib 1.31. (#216)
+
 	* src/pj_fileapi.c, etc: Implement a virtual file api accessable
 	through the context for init file and grid shift file access.
 
